Bug 349299 - kmail crash when clicking the search button
Summary: kmail crash when clicking the search button
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2015-06-17 17:46 UTC by Martin Koller
Modified: 2015-06-28 06:14 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Koller 2015-06-17 17:46:02 UTC
Application: kmail (4.14.8)
KDE Platform Version: 4.14.8
Qt Version: 4.8.6
Operating System: Linux 3.19.2-1-desktop x86_64
Distribution: "openSUSE 13.2 (Harlequin) (x86_64)"

-- Information about the crash:
- What I was doing when the application crashed:

I entered a search string in the quick search field above the message list - no matching mail was found in this folder, so I clicked on the search action to get the search window for selecting other folders, but kmail crashed

-- Backtrace:
Application: KMail (kmail), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f11eb0ea800 (LWP 10376))]

Thread 6 (Thread 0x7f11c5d61700 (LWP 10379)):
#0  0x00007f11e624905f in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libpthread.so.0
#1  0x00007f11db952686 in WTF::TCMalloc_PageHeap::scavengerThread() () at /usr/lib64/libQtWebKit.so.4
#2  0x00007f11db9526b9 in  () at /usr/lib64/libQtWebKit.so.4
#3  0x00007f11e62450a4 in start_thread () at /lib64/libpthread.so.0
#4  0x00007f11e844408d in clone () at /lib64/libc.so.6

Thread 5 (Thread 0x7f1184bce700 (LWP 10380)):
#0  0x00007f11e624905f in pthread_cond_wait@@GLIBC_2.3.2 () at /lib64/libpthread.so.0
#1  0x00007f11db6c4e7d in JSC::BlockAllocator::blockFreeingThreadMain() () at /usr/lib64/libQtWebKit.so.4
#2  0x00007f11db97a1e6 in WTF::wtfThreadEntryPoint(void*) () at /usr/lib64/libQtWebKit.so.4
#3  0x00007f11e62450a4 in start_thread () at /lib64/libpthread.so.0
#4  0x00007f11e844408d in clone () at /lib64/libc.so.6

Thread 4 (Thread 0x7f117fbff700 (LWP 10381)):
#0  0x00007f11e843bc5d in poll () at /lib64/libc.so.6
#1  0x00007f11e017ebe4 in  () at /usr/lib64/libglib-2.0.so.0
#2  0x00007f11e017ecec in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#3  0x00007f11e9a9d0de in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x7f11780008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:452
#4  0x00007f11e9a6ee6f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=this@entry=0x7f117fbfede0, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f11e9a6f165 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (this=this@entry=0x7f117fbfede0, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007f11e996c0bf in QThread::exec() (this=<optimized out>) at thread/qthread.cpp:538
#7  0x00007f11e996e79f in QThreadPrivate::start(void*) (arg=0x2a5d900) at thread/qthread_unix.cpp:349
#8  0x00007f11e62450a4 in start_thread () at /lib64/libpthread.so.0
#9  0x00007f11e844408d in clone () at /lib64/libc.so.6

Thread 3 (Thread 0x7f1177fff700 (LWP 26502)):
#0  0x00007f11e843d2f3 in select () at /lib64/libc.so.6
#1  0x00007f11e9a4d0df in QProcessManager::run() (this=0x7f11e9dd7520 <processManager()::processManager>) at io/qprocess_unix.cpp:270
#2  0x00007f11e996e79f in QThreadPrivate::start(void*) (arg=0x7f11e9dd7520 <processManager()::processManager>) at thread/qthread_unix.cpp:349
#3  0x00007f11e62450a4 in start_thread () at /lib64/libpthread.so.0
#4  0x00007f11e844408d in clone () at /lib64/libc.so.6

Thread 2 (Thread 0x7f1177587700 (LWP 7737)):
#0  0x00007f11e843bc5d in poll () at /lib64/libc.so.6
#1  0x00007f11e017ebe4 in  () at /usr/lib64/libglib-2.0.so.0
#2  0x00007f11e017ecec in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#3  0x00007f11e9a9d0de in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x7f1168018790, flags=...) at kernel/qeventdispatcher_glib.cpp:452
#4  0x00007f11e9a6ee6f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=this@entry=0x7f1177586da0, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f11e9a6f165 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (this=this@entry=0x7f1177586da0, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007f11e996c0bf in QThread::exec() (this=this@entry=0x596e0d0) at thread/qthread.cpp:538
#7  0x00007f11e9a50783 in QInotifyFileSystemWatcherEngine::run() (this=0x596e0d0) at io/qfilesystemwatcher_inotify.cpp:265
#8  0x00007f11e996e79f in QThreadPrivate::start(void*) (arg=0x596e0d0) at thread/qthread_unix.cpp:349
#9  0x00007f11e62450a4 in start_thread () at /lib64/libpthread.so.0
#10 0x00007f11e844408d in clone () at /lib64/libc.so.6

Thread 1 (Thread 0x7f11eb0ea800 (LWP 10376)):
[KCrash Handler]
#6  0x00007f11e394aa3a in MailCommon::SearchPattern::purify(bool) (this=0x7ffe83960960, removeAction=true) at /usr/src/debug/kdepim-4.14.8/mailcommon/search/searchpattern.cpp:151
#7  0x00007f11e9f4fcd6 in  () at /usr/lib64/libkmailprivate.so.4
#8  0x00007f11e9ec0ea4 in KMMainWidget::slotRequestFullSearchFromQuickSearch() () at /usr/lib64/libkmailprivate.so.4
#9  0x00007f11e9fafd1f in  () at /usr/lib64/libkmailprivate.so.4
#10 0x00007f11e9a841fa in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) (sender=0x2f09130, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7ffe83960c40) at kernel/qobject.cpp:3576
#11 0x00007f11e8e03622 in QAction::triggered(bool) () at /usr/lib64/libQtGui.so.4
#12 0x00007f11e8e04fd3 in QAction::activate(QAction::ActionEvent) () at /usr/lib64/libQtGui.so.4
#13 0x00007f11e91b7112 in  () at /usr/lib64/libQtGui.so.4
#14 0x00007f11e91b723c in QAbstractButton::mouseReleaseEvent(QMouseEvent*) () at /usr/lib64/libQtGui.so.4
#15 0x00007f11e926e16a in QToolButton::mouseReleaseEvent(QMouseEvent*) () at /usr/lib64/libQtGui.so.4
#16 0x00007f11e8e58c0a in QWidget::event(QEvent*) () at /usr/lib64/libQtGui.so.4
#17 0x00007f11e8e0976c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib64/libQtGui.so.4
#18 0x00007f11e8e0fdea in QApplication::notify(QObject*, QEvent*) () at /usr/lib64/libQtGui.so.4
#19 0x00007f11eab75dca in KApplication::notify(QObject*, QEvent*) (this=0x7ffe83961c30, receiver=0x301c690, event=0x7ffe83961140) at /usr/src/debug/kdelibs-4.14.8/kdeui/kernel/kapplication.cpp:311
#20 0x00007f11e9a702ad in QCoreApplication::notifyInternal(QObject*, QEvent*) (this=0x7ffe83961c30, receiver=0x301c690, event=0x7ffe83961140) at kernel/qcoreapplication.cpp:953
#21 0x00007f11e8e0f5e3 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () at /usr/lib64/libQtGui.so.4
#22 0x00007f11e8e80c9b in  () at /usr/lib64/libQtGui.so.4
#23 0x00007f11e8e7f70c in QApplication::x11ProcessEvent(_XEvent*) () at /usr/lib64/libQtGui.so.4
#24 0x00007f11e8ea65c2 in  () at /usr/lib64/libQtGui.so.4
#25 0x00007f11e017ea04 in g_main_context_dispatch () at /usr/lib64/libglib-2.0.so.0
#26 0x00007f11e017ec48 in  () at /usr/lib64/libglib-2.0.so.0
#27 0x00007f11e017ecec in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#28 0x00007f11e9a9d0be in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x2504b70, flags=...) at kernel/qeventdispatcher_glib.cpp:450
#29 0x00007f11e8ea6676 in  () at /usr/lib64/libQtGui.so.4
#30 0x00007f11e9a6ee6f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=this@entry=0x7ffe83961880, flags=...) at kernel/qeventloop.cpp:149
#31 0x00007f11e9a6f165 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (this=this@entry=0x7ffe83961880, flags=...) at kernel/qeventloop.cpp:204
#32 0x00007f11e9a745b9 in QCoreApplication::exec() () at kernel/qcoreapplication.cpp:1225
#33 0x0000000000402f3f in  ()
#34 0x00007f11e8380b05 in __libc_start_main () at /lib64/libc.so.6
#35 0x0000000000403414 in _start ()

Reported using DrKonqi
Comment 1 Laurent Montel 2015-06-28 06:14:57 UTC
Git commit 3a40aa397a5c1955d957b4396ef604686676e052 by Montel Laurent.
Committed on 28/06/2015 at 06:13.
Pushed by mlaurent into branch 'KDE/4.14'.

Fix crash when we click on search button
Related: bug 349665
FIXED-IN: 4.10

M  +5    -4    mailcommon/search/searchpattern.cpp

http://commits.kde.org/kdepim/3a40aa397a5c1955d957b4396ef604686676e052