Fix crash when we click on search button

BUG: 349299
BUG: 349665
FIXED-IN: 4.10